# MacroSolver

./: .gitignore  CMakeLists.txt  README.md  define_list9.txt  macro_solver.cpp  macro_solver_test.cpp
my_std/normal/: CMakeLists.txt
my_std/normal/include/: solve_macro.h
my_std/normal/src/: solve_macro.cpp
tests/: define_list9.txt
