cmake_minimum_required(VERSION 3.22)
project(macro_solver)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 23)
file(GLOB STD_SUBDIRS CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/my_std/*)
set(all_library_name)
set(EXCLUDED_DIRS)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
foreach (dir ${STD_SUBDIRS})
    if (IS_DIRECTORY ${dir})
        get_filename_component(dir_name ${dir} NAME)
        list(FIND EXCLUDED_DIRS ${dir_name} dir_index)
        if (${dir_index} EQUAL -1)
            add_subdirectory(${dir})
            list(APPEND all_library_name ${variable_for_father})
        endif ()
    endif ()
endforeach ()
file(GLOB ALL_SRC_FILES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/*test.cpp)
foreach (SRC_FILE ${ALL_SRC_FILES})
    get_filename_component(EXE_NAME ${SRC_FILE} NAME_WE)
    message(STATUS "Adding executable ${EXE_NAME}")
    add_executable(${EXE_NAME} ${SRC_FILE})
    foreach (library ${all_library_name})
        target_link_libraries(${EXE_NAME} PUBLIC ${library})
    endforeach ()
endforeach ()

# 添加 macro_solver 可执行文件
add_executable(macro_solver macro_solver.cpp)
target_link_libraries(macro_solver PUBLIC ${all_library_name})
